--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.122.0",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^14.17.3",
-    "aws-cdk": "^1.122.0",
-    "jest": "26.6.3",
-    "ts-jest": "26.5.6",
+    "@aws-cdk/assert": "^1.125.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^14.17.20",
+    "aws-cdk": "^1.125.0",
+    "jest": "^27.2.4",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^1.122.0",
-    "@aws-cdk/aws-iam": "^1.122.0",
-    "@aws-cdk/aws-lambda": "^1.122.0",
-    "@aws-cdk/aws-logs": "^1.122.0",
-    "@aws-cdk/aws-rds": "^1.122.0",
-    "@aws-cdk/aws-s3": "^1.122.0",
-    "@aws-cdk/aws-secretsmanager": "^1.122.0",
-    "@aws-cdk/aws-ssm": "^1.122.0",
-    "@aws-cdk/core": "^1.122.0",
-    "@aws-cdk/custom-resources": "^1.122.0"
+    "@aws-cdk/aws-ec2": "^1.125.0",
+    "@aws-cdk/aws-iam": "^1.125.0",
+    "@aws-cdk/aws-lambda": "^1.125.0",
+    "@aws-cdk/aws-logs": "^1.125.0",
+    "@aws-cdk/aws-rds": "^1.125.0",
+    "@aws-cdk/aws-s3": "^1.125.0",
+    "@aws-cdk/aws-secretsmanager": "^1.125.0",
+    "@aws-cdk/aws-ssm": "^1.125.0",
+    "@aws-cdk/core": "^1.125.0",
+    "@aws-cdk/custom-resources": "^1.125.0"
   }
 }
